[package]
name = "domino"
version = "0.1.0"
authors = ["Akihito KIRISAKI <kirisaki@klara.works>"]
edition = "2018"


[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-session = "0.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
percent-encoding = "2.1.0"
chrono = "0.4.11"
hmac-sha1 = "0.1.3"
base64 = "0.12.0"
awc = { version = "2.0.0-alpha", features = ["rustls"] }
